data/derived/comb/progs/unify/prog3000.ml.out
Characters 67-80:
  | false -> [digitsOfInt n/10] @ [n%10];;
              ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
